@@ -1599,10 +1599,13 @@ phonebookfile = phonebook-dosbox-x.txt
 #                  dev:<devname> (i.e. dev:lpt1) to forward data to a device,
 #                  or append:<file> appends data to the specified file.
 #                  Without the above parameters data is written to files in the capture dir.
-#                  Additional parameters: timeout:<milliseconds> = how long to wait before
-#                  closing the file on inactivity (default:500), addFF to add a formfeed when
-#                  closing, addLF to add a linefeed if the app doesn't, cp:<codepage number>
-#                  to perform codepage translation, i.e. cp:437
+#                  Additional parameters:
+#                  timeout:<milliseconds> = how long to wait before closing the file on inactivity (default:500),
+#                  addFF to add a formfeed when closing, addLF to add a linefeed if the app doesn't.
+#                  cp:<codepage number> to perform codepage translation, i.e. cp:437
+#                  openps:<program>: start a program to open the file if the print output is detected to be PostScript.
+#                  openpcl:<program>: start a program to open the file if the print output is detected to be PCL.
+#                  openwith:<program>: start a program to open the file in all other conditions.
 #                for printer:
 #                  printer still has it's own configuration section above.
 # parallel2: see parallel1
