@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Dec 5, 2020 2:54:49am"
-#define GIT_COMMIT_HASH "66140fe"
+#define UPDATED_STR "Dec 8, 2020 4:12:01am"
+#define GIT_COMMIT_HASH "2f3f6c2"
 #define COPYRIGHT_END_YEAR "2020"
