@@ -3478,10 +3478,13 @@ void DOSBOX_SetupConfigSections(void) {
             "    dev:<devname> (i.e. dev:lpt1) to forward data to a device,\n"
             "    or append:<file> appends data to the specified file.\n"
             "    Without the above parameters data is written to files in the capture dir.\n"
-            "    Additional parameters: timeout:<milliseconds> = how long to wait before\n"
-            "    closing the file on inactivity (default:500), addFF to add a formfeed when\n"
-            "    closing, addLF to add a linefeed if the app doesn't, cp:<codepage number>\n"
-            "    to perform codepage translation, i.e. cp:437\n"
+            "    Additional parameters:\n"
+            "    timeout:<milliseconds> = how long to wait before closing the file on inactivity (default:500),\n"
+            "    addFF to add a formfeed when closing, addLF to add a linefeed if the app doesn't.\n"
+            "    cp:<codepage number> to perform codepage translation, i.e. cp:437\n"
+            "    openps:<program>: start a program to open the file if the print output is detected to be PostScript.\n"
+            "    openpcl:<program>: start a program to open the file if the print output is detected to be PCL.\n"
+            "    openwith:<program>: start a program to open the file in all other conditions.\n"
             "  for printer:\n"
             "    printer still has it's own configuration section above."
     );
